--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 padding-top: 0;
                 padding-left: 0;
                 padding-right: 0;
+                margin-top: -10vh;
             }
         }
     </style>
